[package]
name = "raqote-winit-blit"
version = "0.1.0"
authors = ["Markus Røyset <maroider@protonmail.com>"]
edition = "2018"

[dependencies]
env_logger = "0.7"
iced_graphics = { path = "../../graphics" }
iced_native = { path = "../../native" }
iced_raqote = { path = "../../raqote" }
winit = "0.23.0"
winit-blit = { git = "https://github.com/rust-windowing/winit-blit", rev = "17a0319" }
